# apps/moca/api/review/serializers.py
@@ -1,6 +1,7 @@
 from django.db import models
 
 from rest_framework import serializers
+from drf_yasg.utils import swagger_serializer_method
 
 from moca.api.user.serializers import UserSnippetSerializer
 from moca.models.appointment import Review
@@ -8,17 +9,12 @@ from moca.models.user import User
 
 
 class ReviewSerializer(serializers.ModelSerializer):
+  patient = serializers.SerializerMethodField()
 
   class Meta:
     model = Review
     fields = ['comment', 'rating', 'patient']
 
-  def to_representation(self, obj):
-    representation = super().to_representation(obj)
-
-    patient_id = representation['patient']
-    patient = User.objects.get(id=patient_id)
-
-    representation['patient'] = UserSnippetSerializer(patient).data
-
-    return representation
+  @swagger_serializer_method(serializer_or_field=UserSnippetSerializer)
+  def get_patient(self, obj):
+    return UserSnippetSerializer(obj.patient.user).data
